<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.passkeycaseinventory.EditorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical">

            <TextView
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/product_details"
                android:paddingBottom="6dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/white" />

            <EditText
                android:id="@+id/name_edit"
                android:hint="@string/case_name"
                style="@style/head_edittext"
                android:theme="@style/OrangeEditTheme"/>

            <AutoCompleteTextView
                android:id="@+id/supplier_autocomplete"
                style="@style/head_edittext"
                android:hint="@string/supplier"
                android:theme="@style/OrangeEditTheme"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/stock_information"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/qty_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="30sp"
                android:hint="@string/qty"
                android:layout_marginBottom="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sale_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_minus"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/order_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_plus"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/order_more_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/order_more"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:textSize="30sp"/>
                <EditText
                    android:id="@+id/price_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="30sp"
                    android:hint="@string/price"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:transitionName="stock_image" />

            <Button
                android:id="@+id/take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/take_picture"
                android:layout_gravity="bottom"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>